# cryptocurrency.cv

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaksignore  .i18nrc.js  .lintstagedrc.js  .stylelintrc.json  .vercelignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.ws  GEMINI.md  README.ar.md  README.bg.md  README.bn.md  README.cs.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.hr.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.md  README.ms.md  README.nl.md  README.no.md  README.pl.md  README.pt.md  README.ru.md  (+52 more)
.devcontainer/: devcontainer.json
.do/: app.yaml
.github/: dependabot.yml
.storybook/: main.ts  preview.tsx
.well-known/: ai-plugin.json
alfred/: README.md  crypto-news.sh
archive/: index.json
chatgpt/: README.md  openapi.yaml
cli/: README.md  index.js  package.json
contracts/: CryptoNewsOracle.sol
copilot-extension/: README.md  package.json
docs/: AGENT-AUDIT-PROMPTS.md  AI-FEATURES.md  API-BACKEND-COMPARISON.md  API-ROUTES-CATALOG.md  API.md  API.zh-CN.md  ARCHITECTURE.md  AUDIT-3-UI-PAGES-COMPONENTS.md  AUDIT-5-INTEGRATIONS-EXTENSIONS.md  CDA-ARCHITECTURE-COMPLETE.md  CODEBASE-AUDIT.md  COMPONENTS.md  CONTRIBUTING.md  DATA-SOURCES-RUNBOOK.md  DEPLOYMENT.md  DEVELOPER-GUIDE.md  DISASTER-RECOVERY.md  EXAMPLES.md  EXTERNAL-API-ROUTES.md  FEATURES.md  LIBRARIES.md  (+15 more)
sdk/python/: crypto_news.py  pyproject.toml
sdk/python/crypto_news/: __init__.py  async_client.py  client.py  errors.py
sdk/python/tests/: test_client.py
(+4576 files in other folders)
