[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-news-client"
version = "1.0.0"
description = "Free Crypto News API client — no API key required"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
  {name = "nirholas", email = "22895867+nirholas@users.noreply.github.com"},
]
keywords = [
  "crypto", "news", "api", "bitcoin", "defi", "ethereum",
  "blockchain", "cryptocurrency", "free", "sdk",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[project.optional-dependencies]
async = ["aiohttp>=3.9"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "aiohttp>=3.9"]

[project.urls]
Homepage = "https://cryptocurrency.cv"
Repository = "https://github.com/nirholas/free-crypto-news"
Documentation = "https://github.com/nirholas/free-crypto-news/tree/main/sdk/python"
Issues = "https://github.com/nirholas/free-crypto-news/issues"

[tool.setuptools]
packages = ["crypto_news"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
